gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/protattr1.d
version https://git-lfs.github.com/spec/v1
oid sha256:4a911d021af4d671109e2923c9fa8dbd039a7f8563c6268740b18e4fc0f60a6c
size 272
